# RP2040-FreeRTOS-Template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  readme.md
Src/: freertos.c
Src/BME280Driver/: BME280Driver.cpp  BME280Driver.h  BME280_defs.hh
Src/HAL/: I2CInterface.hh
Src/HAL/GPIOPinInterface/: GPIOPinInterface.hh
Src/HAL/GPIOPinInterface/RP2040/: RP2040_GPIOPin.hh
Src/HAL/RP2040/PR2040_GPIO/: RP2040_GPIOPin.cpp  RP2040_GPIOPin.hh
Src/HAL/RP2040/RP2040_I2C/: RP2040_I2C.cpp  RP2040_I2C.h
Src/PrimaryTask/: PrimaryTask.cpp  PrimaryTask.hh
Src/main/: main.cpp  main.h
Src/printf/: printf.c
